LogEntryFrontendDTO, DamageEntry, endpoints